src/test/deca/lexicographie/invalid/sansObjet/invalid_caracter8.deca
{
    boolean x = true;
    println("Hello");
    ù
}